--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 }
 body{
     min-height: 100vh;
+    overflow-x: hidden;
+    position: relative;
 }
 header{
     position: absolute;
@@ -15,7 +17,6 @@ header{
     left: 0;
     width: 100%;
     padding: 30px 100px;
-    background: red;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -53,11 +54,56 @@ header{
     opacity: 0;
 }
 .navigation a:hover span
-/* , .navigation a.active span */
+, .navigation a.active span
 {
     transform: scale(1);
     opacity: 1;
 }
-
+.Parallax{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: url(/images/background.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+#text{
+    position: absolute;
+    font-size: 5rem;
+    color: #1b283a;
+    text-shadow: 2px 4px 5px #f9f9f9;
+}
+.Parallax img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    pointer-events: none;
+}
+.Parallax img#gate-left {
+    transform: translateX(-282px);
+}
+.Parallax img#gate-right {
+    transform: translateX(305px);
+}
+.sec{
+    position: relative;
+    background: #020912;
+    padding: 30px 100px;
+}
+.sec h2{
+    font-size: 3rem;
+    color: #fff;
+    margin-bottom: 10px;
+}
+.sec p{
+    font-size: 1rem;
+    color: #fff;
+    font-weight: 300;
+    text-align: justify;
+}
 
 
